# masters-thesis

./: .gitignore  README.md  pyproject.toml
csvs/: dunss_test_pairwise_per_metric.csv  dunss_test_pairwise_per_metric_holm.csv  field_estimates_and_cover_metrics.csv  lidar_assessed_storey_limits.csv  metric_clusters.csv  metric_correlation.csv  pairwise-permanova-result.csv  pca_loadings.csv  pca_loadings_n2.csv  pca_loadings_n3.csv  pca_loadings_n4.csv  pca_loadings_n5.csv  pca_loadings_nNone.csv  pca_scores.csv  pca_scores_n2.csv  pca_scores_n3.csv  pca_scores_n4.csv  pca_scores_n5.csv  pca_scores_nNone.csv  plot_all_metrics.csv  plot_representative_metrics.csv  plot_summary_metrics.csv  selected_metrics.csv  selected_metrics_correlation.csv  significant_dunns_results_with_cliffs_delta.csv  significant_dunns_results_with_cliffs_delta_holm.csv  site_all_metrics.csv  site_info.csv  site_representative_metrics.csv
forest_structure_tools/: README.md  cloud_metrics.py  cv.py  gini.py  metrics.py  metrics_v2.py  parallel_utils.py  pdal_utils.py  template_utils.py  typing.py  utils.py  z_metrics.py
notebooks/: 02_preprocess_lidar_sites.ipynb  02_process_sites.ipynb  02_process_sites_lidar.ipynb  02a_visualise_sites.ipynb  02b_cloud_noise.ipynb  03_clip_lidar_plots.ipynb  03_process_plots_lidar.ipynb  03_visualise_sites.ipynb  03a_plots_ITD.ipynb  03b_visualise_plots.ipynb  04_cloud_noise.ipynb  04_grid_and_voxel_metrics.ipynb  05_plot_summary_metrics.ipynb  05_process_plots_lidar.ipynb  05_storey_metrics.ipynb  06_corr_analysis.ipynb  06_plot_summary_metrics.ipynb  06_visualise_plots.ipynb  072_z_metrics.ipynb  073_z_metrics_combined.ipynb  07_cloud_metrics.ipynb  07_plot_metrics.ipynb  07_process_site_metrics.ipynb  07_statistical_diffs.ipynb  08_aggregating_metrics.ipynb  08_clip_and_save_metrics.ipynb  08_metrics_pca.ipynb  08_raster_metrics.ipynb  08_visualise_metrics.ipynb  10_compare_cover_metrics.ipynb  11_metrics_pca.ipynb  12_corr_analysis.ipynb  12_representative_metric_set.ipynb  13_anovas.ipynb  13_lmm.ipynb  14_anovas.ipynb  14_metrics_pca.ipynb  20_visualise_sites.ipynb  21_visualise_plots.ipynb  (+25 more)
(+24 files in other folders)
