[project]
authors = [{name = "jameswesc", email = "jms.wsc@gmail.com"}]
name = "forest-structure-tools"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
    "rich>=14.1.0,<15",
    "click>=8.0.0,<9"
]

[project.scripts]
forest-tools = "forest_structure_tools.cli:cli"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
forest_structure_tools = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pdal = ">=2.8.4,<3"
python-pdal = ">=3.4.5,<4"
ipykernel = ">=6.30.1,<7"
click = ">=8.2.1,<9"
numpy = ">=2.3.2,<3"
pandas = ">=2.3.1,<3"
geopandas = ">=1.1.1,<2"
xarray = ">=2025.7.1,<2026"
shapely = ">=2.1.1,<3"
jinja2 = ">=3.1.6,<4"
