[project]
authors = [{name = "jameswesc", email = "jms.wsc@gmail.com"}]
name = "forest-structure-tools"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
    "rich>=14.1.0,<15",
    "click>=8.0.0,<9"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
forest_structure_tools = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pdal = ">=2.8.4,<3"
python-pdal = ">=3.4.5,<4"
ipykernel = ">=6.30.1,<7"
click = ">=8.2.1,<9"
numpy = ">=2.3.2,<3"
pandas = ">=2.3.1,<3"
geopandas = ">=1.1.1,<2"
xarray = ">=2025.7.1,<2026"
shapely = ">=2.1.1,<3"
jinja2 = ">=3.1.6,<4"
dask = ">=2025.7.0,<2026"
jupyterlab = ">=4.4.5,<5"
ipywidgets = ">=8.1.7,<9"
pyvista = ">=0.46.0,<0.47"
cmcrameri = ">=1.9,<2"
cmocean = ">=4.0.3,<5"
colorcet = ">=3.1.0,<4"
imageio = ">=2.37.0,<3"
meshio = ">=5.3.5,<6"
jupyter-server-proxy = ">=4.4.0,<5"
trame-client = ">=3.9.2,<4"
trame-server = ">=3.6.0,<4"
trame-vtk = ">=2.9.1,<3"
trame-vuetify = ">=3.0.2,<4"
trame = ">=3.11.0,<4"
scipy = ">=1.16.0,<2"
seaborn = ">=0.13.2,<0.14"
h5netcdf = ">=1.6.4,<2"
plotly = ">=6.3.0,<7"
